feat: se agrega lightbox

--- a/static/src/scss/partials/section_hero.scss
+++ b/static/src/scss/partials/section_hero.scss
@@ -35,9 +35,9 @@
 }
 
 @media (min-width: 1440px) {
-    .section_hero {
-        &__title {
-            font-size: 235px;
-        }
-    }
+    // .section_hero {
+    //     &__title {
+    //         font-size: 235px;
+    //     }
+    // }
 }
