--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -14,3 +14,4 @@
 @import 'partials/section_twitter.scss';
 @import 'partials/section_interview.scss';
 @import 'partials/section_expect.scss';
+@import 'partials/lightbox.scss';
