--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -345,11 +345,6 @@ input {
     font-size: 185px;
   }
 }
-@media (min-width: 1440px) {
-  .section_hero__title {
-    font-size: 235px;
-  }
-}
 .section_about__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1285,5 +1280,308 @@ input {
   }
   .expect__bottom {
     font-size: 24px;
+  }
+}
+.lightbox-active {
+  position: relative;
+  overflow: hidden;
+}
+
+.lightbox {
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 706px;
+  overflow: scroll;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+.lightbox.active {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: inherit;
+}
+.lightbox__overlay {
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  background: #F3F2F0;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.lightbox__wrap {
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 1236px;
+  max-width: 340px;
+  position: relative;
+  z-index: 2;
+  -webkit-filter: drop-shadow(0px 4px 100px rgba(243, 242, 240, 0.35));
+          filter: drop-shadow(0px 4px 100px rgba(243, 242, 240, 0.35));
+  width: 100%;
+}
+.lightbox__nav {
+  position: absolute;
+  right: 38px;
+  top: 48px;
+  right: 8px;
+  top: 8px;
+  height: 50px;
+  width: 50px;
+}
+.lightbox__nav__svg {
+  width: 20px;
+}
+.lightbox__data {
+  position: relative;
+  padding: 50px 25px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 28px;
+}
+.lightbox__title {
+  font: 300 32px/32px var(--font-family);
+  margin: 0 0 2px;
+}
+.lightbox__text {
+  font: 200 14px/20px var(--font-family);
+}
+.lightbox__title:empty, .lightbox__text:empty {
+  display: none;
+}
+.lightbox__img {
+  height: auto;
+  width: 100%;
+}
+.lightbox__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: black;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.lightbox__bottom__a {
+  color: black;
+  border-bottom: 1px solid black;
+  padding-bottom: 5px;
+}
+
+@media (max-height: 650px) and (max-width: 768px) {
+  .lightbox__overflow {
+    height: 996px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+@media (max-width: 768px) and (max-height: 900px) {
+  .lightbox {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  .lightbox__overlay {
+    height: 786px;
+    position: fixed;
+  }
+  .lightbox__overflow {
+    height: 856px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 768px) and (max-height: 630px) {
+  .lightbox {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  .lightbox__overlay {
+    height: 786px;
+    position: fixed;
+  }
+  .lightbox__overflow {
+    height: 856px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .lightbox__wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 1236px;
+  }
+  .lightbox__nav {
+    top: 32px;
+    right: 21px;
+  }
+  .lightbox__figure {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 606px;
+            flex: 0 0 606px;
+  }
+  .lightbox__figure--vertical {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 400px;
+            flex: 0 0 400px;
+  }
+  .lightbox__data {
+    padding: 100px 52px 0;
+    gap: 26px;
+    width: 100%;
+  }
+  .lightbox__title {
+    font: 300 45px/52px var(--font-family);
+    margin: 0 0 16px;
+  }
+  .lightbox__text {
+    font: 200 16px/26px var(--font-family);
+    max-width: 465px;
+  }
+}
+@media (min-width: 960px) and (max-width: 1200px) {
+  .lightbox__wrap {
+    max-width: 960px;
+  }
+  .lightbox__figure {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 475px;
+            flex: 0 0 475px;
+  }
+  .lightbox__data {
+    padding: 50px 35px 0;
+    gap: 10px;
+  }
+  .lightbox__nav {
+    top: 12px;
+  }
+  .lightbox__title {
+    font: 300 40px/47px var(--font-family);
+  }
+}
+@media (min-width: 768px) and (max-width: 960px) {
+  .lightbox {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  .lightbox__wrap {
+    max-width: 380px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .lightbox__figure {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 315px;
+            flex: 0 0 315px;
+  }
+  .lightbox__nav {
+    position: absolute;
+    right: 38px;
+    top: 48px;
+    right: 8px;
+    top: 8px;
+    height: 50px;
+    width: 50px;
+  }
+  .lightbox__nav__svg {
+    width: 20px;
+  }
+  .lightbox__data {
+    position: relative;
+    padding: 50px 25px 124px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 28px;
+  }
+  .lightbox__title {
+    font: 300 32px/32px var(--font-family);
+    margin: 0 0 2px;
+  }
+  .lightbox__text {
+    font: 200 14px/20px var(--font-family);
+  }
+  .lightbox__img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 100%;
+  }
+  .lightbox__overlay {
+    height: 786px;
+    position: fixed;
+    height: 996px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .lightbox__overflow {
+    height: 856px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-top: 20px;
   }
 }
