--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -1345,15 +1345,15 @@ input {
 }
 .lightbox__nav {
   position: absolute;
-  right: 38px;
-  top: 48px;
-  right: 8px;
   top: 8px;
+  left: 8px;
   height: 50px;
   width: 50px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .lightbox__nav__svg {
-  width: 20px;
+  width: 26px;
 }
 .lightbox__data {
   position: relative;
@@ -1397,6 +1397,7 @@ input {
 .lightbox__bottom__a {
   color: black;
   border-bottom: 1px solid black;
+  font-size: 19px;
   padding-bottom: 5px;
 }
 
@@ -1462,8 +1463,10 @@ input {
     max-width: 1236px;
   }
   .lightbox__nav {
-    top: 32px;
-    right: 21px;
+    bottom: 32px;
+    left: 21px;
+    bottom: 0;
+    top: inherit;
   }
   .lightbox__figure {
     -webkit-box-flex: 0;
@@ -1476,16 +1479,16 @@ input {
             flex: 0 0 400px;
   }
   .lightbox__data {
-    padding: 100px 52px 0;
+    padding: 60px 52px 0;
     gap: 26px;
     width: 100%;
   }
   .lightbox__title {
-    font: 300 45px/52px var(--font-family);
-    margin: 0 0 16px;
+    font: 400 45px/52px var(--font-family);
+    margin: 0 0 5px;
   }
   .lightbox__text {
-    font: 200 16px/26px var(--font-family);
+    font: 400 19px/26px var(--font-family);
     max-width: 465px;
   }
 }
@@ -1503,7 +1506,8 @@ input {
     gap: 10px;
   }
   .lightbox__nav {
-    top: 12px;
+    bottom: 0;
+    top: inherit;
   }
   .lightbox__title {
     font: 300 40px/47px var(--font-family);
@@ -1529,15 +1533,15 @@ input {
   }
   .lightbox__nav {
     position: absolute;
-    right: 38px;
-    top: 48px;
-    right: 8px;
-    top: 8px;
+    left: 8px;
+    bottom: 8px;
     height: 50px;
     width: 50px;
+    bottom: 0;
+    top: inherit;
   }
   .lightbox__nav__svg {
-    width: 20px;
+    width: 26px;
   }
   .lightbox__data {
     position: relative;
