feat: se agrega funcionalidad de lightbox

--- a/static/src/css/partials/section_books.css
+++ b/static/src/css/partials/section_books.css
@@ -9,6 +9,9 @@
 .books .swiper-slide {
   max-width: 300px;
 }
+.books__data {
+  display: none;
+}
 .books_item {
   max-width: 300px;
   height: 300px;
