--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -957,6 +957,9 @@ input {
 .books .swiper-slide {
   max-width: 300px;
 }
+.books__data {
+  display: none;
+}
 .books_item {
   max-width: 300px;
   height: 300px;
