--- a/static/src/css/partials/section_belive.css
+++ b/static/src/css/partials/section_belive.css
@@ -1,5 +1,5 @@
 .belive {
-  padding: 30px 0;
+  padding: 30px 0 15px;
 }
 .belive__row {
   display: -webkit-box;
@@ -27,6 +27,7 @@
 }
 .belive__text {
   font-size: 20px;
+  min-height: 66px;
 }
 
 @media (min-width: 768px) {
