--- a/static/src/css/partials/footer.css
+++ b/static/src/css/partials/footer.css
@@ -42,6 +42,11 @@
 .footer__title {
   font-size: 42px;
 }
+.footer small {
+  font-size: 10px;
+  top: -5px;
+  position: relative;
+}
 
 .social {
   display: -webkit-box;
@@ -56,6 +61,9 @@
 @media (min-width: 1024px) {
   .footer {
     padding: 80px 0;
+  }
+  .footer a:hover {
+    color: #AED27F;
   }
   .footer-row {
     gap: 80px;
