--- a/static/src/css/partials/section_how.css
+++ b/static/src/css/partials/section_how.css
@@ -45,7 +45,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-height: 150px;
+  min-height: 250px;
+  line-height: 1.3;
 }
 .item_how__content--row {
   -webkit-box-orient: horizontal;
@@ -103,6 +104,7 @@
   }
   .item_how__content {
     font-size: 20px;
+    line-height: 1.2;
   }
 }
 @media (min-width: 1024px) {
@@ -120,7 +122,7 @@
   }
   .item_how__content {
     font-size: 22px;
-    min-height: 190px;
+    min-height: 205px;
     gap: 4px;
   }
   .item_how__header {
