--- a/static/src/css/partials/section_who_are.css
+++ b/static/src/css/partials/section_who_are.css
@@ -13,6 +13,9 @@
           flex-direction: column;
   gap: 20px;
 }
+.who_are__item--invert {
+  margin-top: 30px;
+}
 .who_are__img {
   max-width: 100%;
   width: 100%;
@@ -49,6 +52,7 @@
 }
 .who_are__button {
   font-size: 18px;
+  color: black;
   border-bottom: 1px solid black;
   display: inline-block;
   padding: 0 0 5px;
@@ -73,7 +77,7 @@
 }
 @media (min-width: 1024px) {
   .who_are {
-    padding: 80px 0;
+    padding: 80px 0 30px;
   }
   .who_are__item--invert {
     -webkit-box-orient: horizontal;
