--- a/static/src/scss/partials/section_belive.scss
+++ b/static/src/scss/partials/section_belive.scss
@@ -1,5 +1,5 @@
 .belive {
-    padding: 30px 0;
+    padding: 30px 0 15px;
 
     &__row {
         display: flex;
@@ -24,6 +24,7 @@
 
     &__text {
         font-size: 20px;
+        min-height: 66px;
     }
 }
 
