--- a/static/src/scss/partials/section_how.scss
+++ b/static/src/scss/partials/section_how.scss
@@ -38,7 +38,8 @@
     &__content {
         display: flex;
         flex-direction: column;
-        min-height: 150px;
+        min-height: 250px;
+        line-height: 1.3;
 
         &--row {
             flex-direction: row;
@@ -97,6 +98,7 @@
 
         &__content {
             font-size: 20px;
+            line-height: 1.2;
         }
     }
 }
@@ -120,7 +122,7 @@
 
         &__content {
             font-size: 22px;
-            min-height: 190px;
+            min-height: 205px;
             gap: 4px;
         }
 
