--- a/static/src/scss/partials/section_who_are.scss
+++ b/static/src/scss/partials/section_who_are.scss
@@ -7,6 +7,11 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+
+    }
+
+    &__item--invert {
+        margin-top: 30px;
     }
 
     &__img {
@@ -41,6 +46,7 @@
 
     &__button {
         font-size: 18px;
+        color: black;
         border-bottom: 1px solid black;
         display: inline-block;
         padding: 0 0 5px;
@@ -64,7 +70,7 @@
 
 @media (min-width: 1024px) {
     .who_are {
-        padding: 80px 0;
+        padding: 80px 0 30px;
 
         &__item--invert {
             flex-direction: row-reverse;
