--- a/static/src/css/partials/ui.css
+++ b/static/src/css/partials/ui.css
@@ -58,7 +58,7 @@
   width: 42px;
 }
 .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background: #AED27F !important;
+  background: #AED27F;
 }
 
 @media (min-width: 768px) {
