--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -152,7 +152,7 @@ input {
   width: 42px;
 }
 .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background: #AED27F !important;
+  background: #AED27F;
 }
 
 @media (min-width: 768px) {
@@ -329,6 +329,8 @@ input {
 }
 .section_hero {
   background: #000;
+  background: url("../images/hero/1x/bg-hero-100.jpg") no-repeat center;
+  background-size: cover;
   color: white;
   height: 100vh;
 }
@@ -970,6 +972,9 @@ input {
 }
 .books .swiper-wrapper {
   padding-bottom: 50px;
+}
+.books .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #F26D43;
 }
 .books .swiper-slide {
   max-width: 300px;
