--- a/static/src/scss/partials/section_books.scss
+++ b/static/src/scss/partials/section_books.scss
@@ -8,6 +8,10 @@
         padding-bottom: 50px;
     }
 
+    .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+        background: #F26D43;
+    }
+
     .swiper-slide {
         max-width: 300px;
     }
