--- a/static/src/scss/partials/section_hero.scss
+++ b/static/src/scss/partials/section_hero.scss
@@ -1,5 +1,7 @@
 .section_hero {
     background: #000;
+    background: url('../images/hero/1x/bg-hero-100.jpg') no-repeat center;
+    background-size: cover;
     color: white;
     height: 100vh;
 
