--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -56,7 +56,7 @@
         width: 42px;
 
         &.swiper-pagination-bullet-active {
-            background: #AED27F !important;
+            background: #AED27F;
         }
     }
 
