--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -541,6 +541,7 @@ input {
     font-size: 22px;
     min-height: 205px;
     gap: 4px;
+    max-width: 1030px;
   }
   .item_how__header {
     min-height: 231px;
@@ -566,10 +567,7 @@ input {
     top: 50px;
   }
   .item_how__title {
-    font-size: 138px;
-  }
-  .item_how__content {
-    font-size: 25px;
+    font-size: 130px;
   }
   .item_how__image {
     height: 368px;
