--- a/static/src/scss/partials/section_how.scss
+++ b/static/src/scss/partials/section_how.scss
@@ -124,6 +124,7 @@
             font-size: 22px;
             min-height: 205px;
             gap: 4px;
+            max-width: 1030px;
         }
 
         &__header {
@@ -159,11 +160,7 @@
         }
 
         &__title {
-            font-size: 138px;
-        }
-
-        &__content {
-            font-size: 25px;
+            font-size: 130px;
         }
 
         &__image {
