--- a/static/src/css/partials/section_expect.css
+++ b/static/src/css/partials/section_expect.css
@@ -29,6 +29,10 @@
 .expect__title span {
   display: block;
 }
+.expect__content__a {
+  color: black;
+  display: block;
+}
 .expect__content-right {
   font-size: 20px;
   margin: 10px 0 30px;
