--- a/static/src/scss/partials/section_expect.scss
+++ b/static/src/scss/partials/section_expect.scss
@@ -25,6 +25,11 @@
         }
     }
 
+    &__content__a {
+        color: black;
+        display: block;
+    }
+
     &__content-right {
         font-size: 20px;
         margin: 10px 0 30px;
