--- a/static/src/css/partials/section_books.css
+++ b/static/src/css/partials/section_books.css
@@ -37,6 +37,12 @@
   height: 30px;
 }
 
+@media (min-width: 768px) {
+  .books {
+    padding-top: 90px;
+    margin-top: 0;
+  }
+}
 @media (min-width: 1024px) {
   .books_item {
     max-width: 480px;
