--- a/static/src/scss/partials/section_belive.scss
+++ b/static/src/scss/partials/section_belive.scss
@@ -30,7 +30,7 @@
 
 @media (min-width: 768px) {
     .belive {
-        padding: 40px 0;
+        padding: 0 0 40px;
 
         &__row {
             flex-direction: row;
@@ -59,7 +59,12 @@
 @media (min-width: 1024px) {
 
     .belive {
-        padding: 61px 0 15px;
+        padding: 90px 0 15px;
+        margin-top: 0;
+
+        .swiper {
+            margin-top: 0;
+        }
 
         &__header {
             width: 300px;
