feat: se agregan links

--- a/static/src/css/partials/section_who_are.css
+++ b/static/src/css/partials/section_who_are.css
@@ -36,7 +36,6 @@
   font-size: 22px;
 }
 .who_are__content {
-  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -56,6 +55,7 @@
   border-bottom: 1px solid black;
   display: inline-block;
   padding: 0 0 5px;
+  display: none;
   width: auto;
 }
 
@@ -87,10 +87,11 @@
     text-align: right;
   }
   .who_are__figure {
-    width: 600px;
     -webkit-box-flex: 0;
         -ms-flex: 0 0 600px;
             flex: 0 0 600px;
+    width: 600px;
+    padding: 0 80px;
   }
   .who_are__item {
     gap: 50px;
