--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -918,7 +918,6 @@ input {
   font-size: 22px;
 }
 .who_are__content {
-  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -938,6 +937,7 @@ input {
   border-bottom: 1px solid black;
   display: inline-block;
   padding: 0 0 5px;
+  display: none;
   width: auto;
 }
 
@@ -969,10 +969,11 @@ input {
     text-align: right;
   }
   .who_are__figure {
-    width: 600px;
     -webkit-box-flex: 0;
         -ms-flex: 0 0 600px;
             flex: 0 0 600px;
+    width: 600px;
+    padding: 0 80px;
   }
   .who_are__item {
     gap: 50px;
