--- a/static/src/scss/partials/section_who_are.scss
+++ b/static/src/scss/partials/section_who_are.scss
@@ -32,7 +32,7 @@
     }
 
     &__content {
-        display: none;
+        // display: none;
         flex-direction: column;
 
         &.active {
@@ -50,6 +50,7 @@
         border-bottom: 1px solid black;
         display: inline-block;
         padding: 0 0 5px;
+        display: none;
         width: auto;
     }
 }
@@ -78,8 +79,9 @@
         }
 
         &__figure {
-            width: 600px;
             flex: 0 0 600px;
+            width: 600px;
+            padding: 0 80px;
         }
 
         &__item {
