--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import 'partials/fonts.scss';
 @import 'partials/normalize.scss';
-// @import 'plugins/swiper-bundle.min.css';
+@import 'partials/nav.scss';
 @import 'partials/ui.scss';
 @import 'partials/header.scss';
 @import 'partials/footer.scss';
