--- a/static/src/scss/partials/section_hero.scss
+++ b/static/src/scss/partials/section_hero.scss
@@ -1,8 +1,9 @@
 .section_hero {
     background: #000;
-    background: url('../images/hero/1x/bg-hero-100.jpg') no-repeat center;
     background-size: cover;
     color: white;
+    position: relative;
+    overflow: hidden;
     height: 100vh;
 
     &__title {
@@ -13,8 +14,28 @@
         max-width: 240px;
     }
 
+    &__container {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+    }
+
+    &__video {
+        position: absolute;
+        object-fit: cover;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     & .row {
         height: 100%;
+        position: relative;
+        z-index: 2;
     }
 }
 
