--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -453,6 +453,10 @@ input {
   overflow: hidden;
   height: 100vh;
 }
+.section_hero .hero_swiper .swiper-container,
+.section_hero .hero_swiper {
+  height: 100vh;
+}
 .section_hero__title {
   position: absolute;
   bottom: 230px;
@@ -480,6 +484,21 @@ input {
   height: 100%;
   position: relative;
   z-index: 2;
+  pointer-events: none;
+  top: 0;
+  position: absolute;
+}
+.section_hero .swiper-pagination {
+  bottom: 89px;
+  top: inherit;
+  bottom: 50px;
+  top: inherit;
+}
+.section_hero .swiper-pagination-bullet {
+  background: black;
+}
+.section_hero .swiper-pagination-bullet.active {
+  background: #aed27f;
 }
 
 @media (min-width: 768px) {
