--- a/static/src/scss/partials/section_hero.scss
+++ b/static/src/scss/partials/section_hero.scss
@@ -1,66 +1,85 @@
 .section_hero {
-    background: #000;
-    background-size: cover;
-    color: white;
-    position: relative;
-    overflow: hidden;
-    height: 100vh;
+	background: #000;
+	background-size: cover;
+	color: white;
+	position: relative;
+	overflow: hidden;
+	height: 100vh;
 
-    &__title {
-        position: absolute;
-        bottom: 230px;
-        right: 20px;
-        font-size: 75px;
-        max-width: 240px;
-    }
+	.hero_swiper .swiper-container,
+	.hero_swiper {
+		height: 100vh;
+	}
 
-    &__container {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+	&__title {
+		position: absolute;
+		bottom: 230px;
+		right: 20px;
+		font-size: 75px;
+		max-width: 240px;
+	}
 
-    }
+	&__container {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 
-    &__video {
-        position: absolute;
-        object-fit: cover;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+	&__video {
+		position: absolute;
+		object-fit: cover;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 
-    & .row {
-        height: 100%;
-        position: relative;
-        z-index: 2;
-    }
+	& .row {
+		height: 100%;
+		position: relative;
+		z-index: 2;
+		pointer-events: none;
+		top: 0;
+		position: absolute;
+	}
+	.swiper-pagination {
+		bottom: 89px;
+		top: inherit;
+		bottom: 50px;
+		top: inherit;
+	}
+	.swiper-pagination-bullet {
+		background: black;
+		&.active {
+			background: #aed27f;
+		}
+	}
 }
 
 @media (min-width: 768px) {
-    .section_hero {
-        &__title {
-            right: 45px;
-            font-size: 135px;
-            max-width: inherit;
-        }
-    }
+	.section_hero {
+		&__title {
+			right: 45px;
+			font-size: 135px;
+			max-width: inherit;
+		}
+	}
 }
 
 @media (min-width: 1024px) {
-    .section_hero {
-        &__title {
-            font-size: 185px;
-        }
-    }
+	.section_hero {
+		&__title {
+			font-size: 185px;
+		}
+	}
 }
 
 @media (min-width: 1440px) {
-    // .section_hero {
-    //     &__title {
-    //         font-size: 235px;
-    //     }
-    // }
+	// .section_hero {
+	//     &__title {
+	//         font-size: 235px;
+	//     }
+	// }
 }
