--- a/static/src/css/partials/section_hero.css
+++ b/static/src/css/partials/section_hero.css
@@ -10,6 +10,12 @@
 .section_hero .hero_swiper {
   height: 100vh;
 }
+.section_hero__img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
 .section_hero__title {
   position: absolute;
   bottom: 230px;
