--- a/static/src/scss/partials/section_hero.scss
+++ b/static/src/scss/partials/section_hero.scss
@@ -11,6 +11,12 @@
 		height: 100vh;
 	}
 
+	&__img {
+		height: 100%;
+		object-fit: cover;
+		width: 100%;
+	}
+
 	&__title {
 		position: absolute;
 		bottom: 230px;
